--- a/presentacion/assets/css/style.css
+++ b/presentacion/assets/css/style.css
@@ -13,9 +13,9 @@
 }
 
 body {
-  position: absolute;
+  position: relative;
   margin: 0;
-  width: 300px;
+  width: 100%;
   height: 50px;
   margin-right: 5px;
   overflow-x: hidden;
@@ -162,16 +162,6 @@ nav {
   height: 65vh;*/
 }
 
-footer {
-  background-color: var(--black);
-  margin-bottom: 0;
-  bottom: 0;
-  width: 100vw;
-  height: 100px;
-  color: gray;
-  text-align: center;
-  opacity: 0.5;
-}
 
 .text {
   width: 50vw;
@@ -540,9 +530,19 @@ h5 {
   cursor: pointer;
   transition: all 0.4s ease-in-out;
 }
-
 .transp:hover {
   box-shadow: 0px 0px 8px #ffffffa4;
+}
+
+footer {
+  background-color: var(--black);
+  margin-bottom: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100px;
+  color: gray;
+  text-align: center;
+  opacity: 0.5;
 }
 
 @media only screen and (max-width: 980px) {
