--- a/presentacion/assets/css/style_viandas.css
+++ b/presentacion/assets/css/style_viandas.css
@@ -21,7 +21,7 @@ body {
 }
 nav {
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: 58px;
   justify-content: space-between;
   padding: 0 -100px;
@@ -30,6 +30,7 @@ nav {
   background-color: papayawhip;
   position: fixed;
   top: 0;
+  z-index: 5;
 }
 .menu {
   display: none;
@@ -47,15 +48,26 @@ nav {
   margin: 0;
   display: flex;
   align-items: center;
+  /*height: 64px;
+    width: 600px;*/
+}
+
+.navbar-left {
+  display: flex;
   height: 64px;
   width: 202px;
 }
-.navbar-left {
+
+.navbar-right {
   display: flex;
+  height: 64px;
+  width: 46vw;
 }
+
 .navbar-left ul {
   margin-left: 12px;
 }
+
 .navbar-left ul li a,
 .navbar-right ul li a {
   text-decoration: none;
@@ -64,19 +76,17 @@ nav {
   padding: 8px;
   border-radius: 8px;
 }
+
 .navbar-left ul li a:hover,
 .navbar-right ul li a:hover {
   border: 1px solid var(--blue);
   color: var(--blue);
 }
-.navbar-email {
-  color: var(--very-light-pink);
-  font-size: var(--sm);
-  margin-right: 12px;
-}
+
 .navbar-shopping-cart {
   position: relative;
 }
+
 .navbar-shopping-cart div {
   width: 16px;
   height: 16px;
@@ -275,20 +285,8 @@ h1 {
   opacity: 0.7;
 }
 
-footer {
-  background-color: var(--black);
-  margin-bottom: 0;
-  margin-top: auto;
-  bottom: 0;
-  width: 100%;
-  height: 100px;
-  color: gray;
-  text-align: center;
-  opacity: 0.5;
-}
 
 /* VENTANA MODAL */
-
 .btn-abrir {
   background: papayawhip;
   color: #fff;
@@ -361,7 +359,7 @@ footer {
   z-index: -1;
 }
 
-.subcription::before {
+.pedido::before {
   content: '';
   position: absolute;
   top: 0;
@@ -388,7 +386,7 @@ footer {
   font-weight: 300;
 }
 
-.subcription {
+.pedido {
   background: #fff;
   flex-basis: 0;
   flex-grow: 2;
@@ -402,8 +400,11 @@ footer {
 }
 
 .sub-content {
+  justify-content: center;
   width: 550px;
   height: 450px;
+  display: flex;
+  flex-direction: column;
 }
 
 .sub-content h2 {
@@ -419,16 +420,16 @@ footer {
   margin-bottom: 30px;
 }
 
-/*.subs-cosas{
+.precio_total{
   margin-left:-32px;
   width: 25vw;
   padding: 15px;
   border: none;
   background: #ccc;
   margin-bottom: 15px;
-}*/
+}
 
-.subs-send {
+.pagar {
   margin-left: -21px;
   width: 25vw;
   padding: 15px;
@@ -442,7 +443,7 @@ footer {
   transition: 0.25s ease background;
 }
 
-.subs-send:hover {
+.pagar:hover {
   background: #1bc59b;
 }
 
@@ -469,6 +470,156 @@ footer {
   transform: scale(1);
   opacity: 1;
 }
+
+
+/*pedidos_dentro_del_carrito*/
+.cantidad {
+  border: none;
+}
+
+.box {
+  overflow-y: auto;
+  border-color: var(--hospital-green);
+  border-radius: 10px;
+}
+
+.carrito {
+  width: 400px;
+  height: 40px;
+  margin-left: 80px;
+  margin-bottom: 10px;
+  flex: 1;/*ocupa todo el espacio disponible horizontalmente*/
+  display: flex; /* Los elementos dentro de la lista se alinearán horizontalmente */
+  /*margin: 10px 0; /* Agrega un margen entre las listas */
+  align-items: center;
+  padding: 10px;
+  border-color: var(--hospital-green);
+  border-radius: 10px;
+  border: 1px solid rgba(0, 0, 0, .1);
+  border-radius: 4px;
+  box-sizing: border-box;
+  overflow: hidden;
+  padding: 10px;
+}
+
+.input-cant {
+  width: 30px;
+  height: 26px;
+  border: 1PX solid rgba(10, 1, 1, 0.267);
+  border-radius: 2px;
+  background-color: var(--text-input-field);
+}
+.menos {
+  border: none;
+  border-radius: 7px 0 0 7px;
+  color: var(--blue);
+  background-color: var(--hospital-green);
+}
+.mas {
+  border: none;
+  border-radius: 0 7px 7px 0;
+  color: var(--blue);
+  background-color: var(--hospital-green);
+  margin-right: 10px;
+}
+.precio {
+  margin-left: 60px; /* Ajusta el valor del margen según tus preferencias */
+  width: 50px;
+  border-color: var(--hospital-green);
+}
+
+.eliminar {
+  margin-left: 70px;
+  color: red;
+  cursor: pointer;
+  border-color: red;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  font-size: 16px;
+  display: flex;
+  justify-content: center; /* Centra horizontalmente */
+  align-items: center; /* Centra verticalmente */
+}
+.eliminar:hover {
+  text-decoration: underline;
+}
+
+/*selector_de_inicio*/
+.us {
+  font-size: 35px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: var(--hospital-green);
+  -webkit-text-stroke: 1px var(--white);
+  text-decoration: underline;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+/* Estilo para el fondo oscuro que cubre la página cuando se muestra el modal */
+.selec_inicio {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1;
+}
+
+/* Estilo para el contenedor del modal */
+.selector {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1rem;
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid white;
+  backdrop-filter: blur(10px);
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: all 0.8s;
+  z-index: 2;
+}
+
+/* Estilo para el botón "Cliente" dentro del modal */
+.transp {
+  background: transparent;
+  width: 100%;
+  height: 45px;
+  margin: 5px;
+  border-radius: 55px;
+  background: rgba(255, 255, 255, 0.137);
+  color: white;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  border: none;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
+}
+.transp:hover {
+  box-shadow: 0px 0px 8px #ffffffa4;
+}
+
+footer {
+  background-color: var(--black);
+  margin-bottom: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100px;
+  color: gray;
+  text-align: center;
+  opacity: 0.5;
+}
+
 
 @media only screen and (max-width: 980px) {
   .pop-up-title {
